; ModuleID = '/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_mkmd5resp.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_mkmd5resp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mg_mkmd5resp.colon = internal constant [2 x i8] c":\00", align 1
@mg_mkmd5resp.one = internal constant i64 1, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i8*, i64, i8*, i64, i8*, i64, i8*, i64, i8*, i64, i8*, i64, i8*)* @mg_mkmd5resp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mg_mkmd5resp(i8* %0, i64 %1, i8* %2, i64 %3, i8* %4, i64 %5, i8* %6, i64 %7, i8* %8, i64 %9, i8* %10, i64 %11, i8* %12, i64 %13, i8* %14) #0 {
  %16 = alloca i8*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i64, align 8
  %20 = alloca i8*, align 8
  %21 = alloca i64, align 8
  %22 = alloca i8*, align 8
  %23 = alloca i64, align 8
  %24 = alloca i8*, align 8
  %25 = alloca i64, align 8
  %26 = alloca i8*, align 8
  %27 = alloca i64, align 8
  %28 = alloca i8*, align 8
  %29 = alloca i64, align 8
  %30 = alloca i8*, align 8
  %31 = alloca [33 x i8], align 16
  store i8* %0, i8** %16, align 8
  store i64 %1, i64* %17, align 8
  store i8* %2, i8** %18, align 8
  store i64 %3, i64* %19, align 8
  store i8* %4, i8** %20, align 8
  store i64 %5, i64* %21, align 8
  store i8* %6, i8** %22, align 8
  store i64 %7, i64* %23, align 8
  store i8* %8, i8** %24, align 8
  store i64 %9, i64* %25, align 8
  store i8* %10, i8** %26, align 8
  store i64 %11, i64* %27, align 8
  store i8* %12, i8** %28, align 8
  store i64 %13, i64* %29, align 8
  store i8* %14, i8** %30, align 8
  %32 = getelementptr inbounds [33 x i8], [33 x i8]* %31, i64 0, i64 0
  %33 = load i8*, i8** %16, align 8
  %34 = load i64, i64* %17, align 8
  %35 = load i8*, i8** %18, align 8
  %36 = load i64, i64* %19, align 8
  %37 = call i32 (i8*, i8*, i64, i8*, i64, i8*, i64, i8*, ...) @cs_md5(i8* %32, i8* %33, i64 %34, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @mg_mkmd5resp.colon, i64 0, i64 0), i64 1, i8* %35, i64 %36, i8* null)
  %38 = load i8*, i8** %30, align 8
  %39 = load i8*, i8** %20, align 8
  %40 = load i64, i64* %21, align 8
  %41 = load i8*, i8** %22, align 8
  %42 = load i64, i64* %23, align 8
  %43 = load i8*, i8** %24, align 8
  %44 = load i64, i64* %25, align 8
  %45 = load i8*, i8** %26, align 8
  %46 = load i64, i64* %27, align 8
  %47 = load i8*, i8** %28, align 8
  %48 = load i64, i64* %29, align 8
  %49 = getelementptr inbounds [33 x i8], [33 x i8]* %31, i64 0, i64 0
  %50 = call i32 (i8*, i8*, i64, i8*, i64, i8*, i64, i8*, ...) @cs_md5(i8* %38, i8* %39, i64 %40, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @mg_mkmd5resp.colon, i64 0, i64 0), i64 1, i8* %41, i64 %42, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @mg_mkmd5resp.colon, i64 0, i64 0), i64 1, i8* %43, i64 %44, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @mg_mkmd5resp.colon, i64 0, i64 0), i64 1, i8* %45, i64 %46, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @mg_mkmd5resp.colon, i64 0, i64 0), i64 1, i8* %47, i64 %48, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @mg_mkmd5resp.colon, i64 0, i64 0), i64 1, i8* %49, i64 32, i8* null)
  ret void
}

declare dso_local i32 @cs_md5(i8*, i8*, i64, i8*, i64, i8*, i64, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
